Euclid layout (fixed)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <a href="#" class="header__search">
+      <button class="header__search">
         <svg class="header__svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <rect width="7.56126" height="1.89031"
@@ -45,7 +45,7 @@
             d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z"
             stroke="var(--base-color)" stroke-width="2" />
         </svg>
-      </a>
+      </button>
     </div>
   </header>
   <main class="main">
@@ -66,169 +66,170 @@
       </div>
     </section>
     <section class="section about">
-      <h2 class="section__title about__title">О&nbsp;нас</h2>
-      <p class="about__desc">
-        Также как перспективное планирование создаёт необходимость включения в&nbsp;производственный план целого ряда
-        внеочередных мероприятий с&nbsp;учётом комплекса экспериментов, поражающих по&nbsp;своей масштабности
-        и&nbsp;грандиозности. А
-        также диаграммы связей могут быть описаны максимально подробно. Мы&nbsp;вынуждены отталкиваться от&nbsp;того,
-        что
-        убеждённость некоторых оппонентов требует от&nbsp;нас анализа как самодостаточных, так и&nbsp;внешне зависимых
-        концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет
-        высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены
-        отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества
-        экспериментов.
-      </p>
-      <div class="about__card-block card-block">
-        <div class="card-block__card card">
-          <div class="card__wrapper">
-            <p class="card-block__desc">
-              Принимая во&nbsp;внимание показатели успешности, перспективное планирование способствует подготовке и
-              реализации
-              новых принципов.
-            </p>
-            <button class="card-block__btn btn">
-              Подробнее
-            </button>
-          </div>
-        </div>
-        <div class="card-block__card-group card-group">
-          <div class="card-group__card card-group__card_top">
-            <div class="card-group__wrapper card-group__wrapper_top">
-              <h3 class="card-group__title">
-                Консультация с&nbsp;широким активом
-              </h3>
-              <p class="card-group__desc">
-                А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для
-                как самодостаточных,
-                так и&nbsp;внешне зависимых концептуальных решений.
+      <div class="container about__container">
+        <h2 class="section__title about__title">О&nbsp;нас</h2>
+        <p class="about__desc">
+          Также как перспективное планирование создаёт необходимость включения в&nbsp;производственный план целого ряда
+          внеочередных мероприятий с&nbsp;учётом комплекса экспериментов, поражающих по&nbsp;своей масштабности
+          и&nbsp;грандиозности. А
+          также диаграммы связей могут быть описаны максимально подробно. Мы&nbsp;вынуждены отталкиваться от&nbsp;того,
+          что
+          убеждённость некоторых оппонентов требует от&nbsp;нас анализа как самодостаточных, так и&nbsp;внешне зависимых
+          концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет
+          высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены
+          отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества
+          экспериментов.
+        </p>
+        <div class="about__card-block card-block">
+          <div class="card-block__card card">
+            <div class="card__wrapper">
+              <p class="card-block__desc">
+                Принимая во&nbsp;внимание показатели успешности, перспективное планирование способствует подготовке и
+                реализации
+                новых принципов.
               </p>
+              <button class="card-block__btn btn">
+                Подробнее
+              </button>
             </div>
           </div>
-          <div class="card-group__card">
-            <div class="card-group__wrapper card-group__wrapper_bottom">
-              <h3 class="card-group__title">
-                В&nbsp;своём стремлении повысить
-              </h3>
-              <p class="card-group__desc">
-                Качество жизни, они забывают, что сплочённость команды профессионалов представляет
-                собой интересный эксперимент проверки прогресса профессионального сообщества.
-              </p>
+          <div class="card-block__card-group card-group">
+            <div class="card-group__card card-group__card_top">
+              <div class="card-group__wrapper card-group__wrapper_top">
+                <h3 class="card-group__title">
+                  Консультация с&nbsp;широким активом
+                </h3>
+                <p class="card-group__desc">
+                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для
+                  как самодостаточных,
+                  так и&nbsp;внешне зависимых концептуальных решений.
+                </p>
+              </div>
+            </div>
+            <div class="card-group__card">
+              <div class="card-group__wrapper card-group__wrapper_bottom">
+                <h3 class="card-group__title">
+                  В&nbsp;своём стремлении повысить
+                </h3>
+                <p class="card-group__desc">
+                  Качество жизни, они забывают, что сплочённость команды профессионалов представляет
+                  собой интересный эксперимент проверки прогресса профессионального сообщества.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <section class="section work-plan">
-      <h2 class="section__title work-plan__title">
-        Как мы&nbsp;работаем
-      </h2>
-      <ul class="work-plan__step-list list-reset">
-        <li class="work-plan__step-item">
-          <a href="" class="work-plan__link work-plan__link_active">1&nbsp;шаг</a>
-        </li>
-        <li class="work-plan__step-item">
-          <a href="" class="work-plan__link">2&nbsp;шаг</a>
-        </li>
-        <li class="work-plan__step-item">
-          <a href="" class="work-plan__link">3&nbsp;шаг</a>
-        </li>
-        <li class="work-plan__step-item">
-          <a href="" class="work-plan__link">4&nbsp;шаг</a>
-        </li>
-      </ul>
-      <div class="work-plan__slide slide">
-        <div class="slide__info">
-          <h3 class="slide__title">
-            Проводим консультацию
-          </h3>
-          <p class="slide__text">
-            Влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями. В&nbsp;рамках
-            спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены
-            соответствующими инстанциями. А также представители современных социальных резервов, инициированные
-            исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей
-            картины, реплицированные с&nbsp;зарубежных источников, современные исследования подвергнуты целой серии
-            независимых исследований. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии освещают
-            чрезвычайно интересные особенности картины в&nbsp;целом, однако конкретные выводы, разумеется, призваны
-            к&nbsp;ответу.
-          </p>
-          <div class="slide__btns btns">
-            <button class="btns__btn btns__btn_left btn">
-              Подробнее
-            </button>
-            <button class="btns__btn btns__btn_right btn">
-              Договор
-            </button>
+      <div class="container work-plan__container">
+        <h2 class="section__title work-plan__title">
+          Как мы&nbsp;работаем
+        </h2>
+        <ul class="work-plan__step-list list-reset">
+          <li class="work-plan__step-item">
+            <a href="" class="work-plan__link work-plan__link_active">1&nbsp;шаг</a>
+          </li>
+          <li class="work-plan__step-item">
+            <a href="" class="work-plan__link">2&nbsp;шаг</a>
+          </li>
+          <li class="work-plan__step-item">
+            <a href="" class="work-plan__link">3&nbsp;шаг</a>
+          </li>
+          <li class="work-plan__step-item">
+            <a href="" class="work-plan__link">4&nbsp;шаг</a>
+          </li>
+        </ul>
+        <div class="work-plan__slide slide">
+          <div class="slide__info">
+            <h3 class="slide__title">
+              Проводим консультацию
+            </h3>
+            <p class="slide__text">
+              Влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями. В&nbsp;рамках
+              спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены
+              соответствующими инстанциями. А также представители современных социальных резервов, инициированные
+              исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей
+              картины, реплицированные с&nbsp;зарубежных источников, современные исследования подвергнуты целой серии
+              независимых исследований. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии освещают
+              чрезвычайно интересные особенности картины в&nbsp;целом, однако конкретные выводы, разумеется, призваны
+              к&nbsp;ответу.
+            </p>
+            <div class="slide__btns btns">
+              <button class="btns__btn btns__btn_left btn">
+                Подробнее
+              </button>
+              <button class="btns__btn btns__btn_right btn">
+                Договор
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="slide__photo">
-          <img src="img/consultation.jpg" alt="Консультация" class="slide__image">
+          <div class="slide__photo">
+            <img src="img/consultation.jpg" alt="Консультация" class="slide__image">
+          </div>
         </div>
       </div>
     </section>
     <section class="section faq">
-      <h2 class="section__title faq__title">
-        Часто задаваемые вопросы
-      </h2>
-      <ul class="faq__list list-reset">
-        <li class="faq__item" tabindex="1">
-          <p class="faq__question">Из&nbsp;чего формируется конечная стоимость проекта?</p>
-          <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
-              fill="#666666" />
-          </svg>
-
-        </li>
-        <li class="faq__item" tabindex="1">
-          <p class="faq__question">У&nbsp;меня есть свой проект. Сможем&nbsp;ли мы&nbsp;его доработать&nbsp;/
-            реализовать?</p>
-          <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
-              fill="#666666" />
-          </svg>
-
-        </li>
-        <li class="faq__item" tabindex="1">
-          <p class="faq__question">Я&nbsp;выбираю между разными компаниями. В&nbsp;чём ваше отличие?</p>
-          <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
-              fill="#666666" />
-          </svg>
-
-        </li>
-        <li class="faq__item" tabindex="1">
-          <p class="faq__question">Могу&nbsp;ли я&nbsp;делегировать вам работу&nbsp;/ согласование
-            с&nbsp;подрядчиком&nbsp;/ организацией?</p>
-          <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
-              fill="#666666" />
-          </svg>
-
-        </li>
-        <li class="faq__item" tabindex="1">
-          <p class="faq__question">Могу&nbsp;ли я&nbsp;вернуть деньги на&nbsp;каком-либо из&nbsp;этапов работ?</p>
-          <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
-              fill="#666666" />
-          </svg>
-
-        </li>
-      </ul>
+      <div class="container faq__container">
+        <h2 class="section__title faq__title">
+          Часто задаваемые вопросы
+        </h2>
+        <ul class="faq__list list-reset">
+          <li class="faq__item" tabindex="1">
+            <p class="faq__question">Из&nbsp;чего формируется конечная стоимость проекта?</p>
+            <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
+                fill="#666666" />
+            </svg>
+          </li>
+          <li class="faq__item" tabindex="1">
+            <p class="faq__question">У&nbsp;меня есть свой проект. Сможем&nbsp;ли мы&nbsp;его доработать&nbsp;/
+              реализовать?</p>
+            <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
+                fill="#666666" />
+            </svg>
+          </li>
+          <li class="faq__item" tabindex="1">
+            <p class="faq__question">Я&nbsp;выбираю между разными компаниями. В&nbsp;чём ваше отличие?</p>
+            <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
+                fill="#666666" />
+            </svg>
+          </li>
+          <li class="faq__item" tabindex="1">
+            <p class="faq__question">Могу&nbsp;ли я&nbsp;делегировать вам работу&nbsp;/ согласование
+              с&nbsp;подрядчиком&nbsp;/ организацией?</p>
+            <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
+                fill="#666666" />
+            </svg>
+          </li>
+          <li class="faq__item" tabindex="1">
+            <p class="faq__question">Могу&nbsp;ли я&nbsp;вернуть деньги на&nbsp;каком-либо из&nbsp;этапов работ?</p>
+            <svg class="faq__icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z"
+                fill="#666666" />
+            </svg>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
