Euclid layout (fixed version 3)

--- a/index.html
+++ b/index.html
@@ -51,17 +51,19 @@
   <main class="main">
     <section class="section hero">
       <div class="container hero__container">
-        <div class="hero__wrapper">
-          <h1 class="hero__title">
-            Проектные решения любой сложности
-          </h1>
-          <p class="hero__desc">
-            Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются
-            уделом проектантов
-          </p>
-          <button class="hero__btn btn">
-            Заказать расчёт
-          </button>
+        <div class="container__background">
+          <div class="hero__wrapper">
+            <h1 class="hero__title">
+              Проектные решения любой сложности
+            </h1>
+            <p class="hero__desc">
+              Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются
+              уделом проектантов
+            </p>
+            <button class="hero__btn btn">
+              Заказать расчёт
+            </button>
+          </div>
         </div>
       </div>
     </section>
@@ -234,7 +236,7 @@
   </main>
 
   <footer class="footer">
-    <div class="footer__container">
+    <div class="container footer__container">
       <div class="footer__links">
         <img src="img/footer__logo.svg" alt="Логотип Евклид" class="footer__logo">
         <ul class="footer__list link-list list-reset">
