--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
   <title>Евклид</title>
 </head>
 
 <body class="page">
   <header class="header">
     <div class="container header__container">
-      <img src="img/logo.svg" alt="Логотип Евклид" class="header__logo">
+      <button class="burger">
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+      </button>
+      <picture class="header__logo">
+        <source srcset="img/logo-320.svg" media="(max-width: 320px)">
+        <source srcset="img/logo-1024.svg" media="(max-width: 1024px)">
+        <img src="img/logo-1920.svg" alt="Логотип Евклид" class="header__logo">
+      </picture>
       <nav class="header__nav nav">
         <ul class="nav__list list-reset">
           <li class="nav__item">
@@ -78,7 +88,8 @@
           что
           убеждённость некоторых оппонентов требует от&nbsp;нас анализа как самодостаточных, так и&nbsp;внешне зависимых
           концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет
-          высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены
+          высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+          Мы&nbsp;вынуждены
           отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества
           экспериментов.
         </p>
@@ -102,7 +113,8 @@
                   Консультация с&nbsp;широким активом
                 </h3>
                 <p class="card-group__desc">
-                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для
+                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты
+                  для
                   как самодостаточных,
                   так и&nbsp;внешне зависимых концептуальных решений.
                 </p>
@@ -148,11 +160,13 @@
               Проводим консультацию
             </h3>
             <p class="slide__text">
-              Влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями. В&nbsp;рамках
-              спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены
+              Влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями.
+              В&nbsp;рамках
+              спецификации современных стандартов, некоторые особенности внутренней политики будут объективно
+              рассмотрены
               соответствующими инстанциями. А также представители современных социальных резервов, инициированные
               исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей
-              картины, реплицированные с&nbsp;зарубежных источников, современные исследования подвергнуты целой серии
+              картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии
               независимых исследований. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии освещают
               чрезвычайно интересные особенности картины в&nbsp;целом, однако конкретные выводы, разумеется, призваны
               к&nbsp;ответу.
@@ -238,7 +252,10 @@
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__links">
-        <img src="img/footer__logo.svg" alt="Логотип Евклид" class="footer__logo">
+        <picture class="footer__logo">
+          <source srcset="img/footer-logo-320.svg" media="(max-width: 320px)">
+          <img src="img/footer__logo.svg" alt="Логотип Евклид">
+        </picture>
         <ul class="footer__list link-list list-reset">
           <li class="link-list__item">
             <a href="#" class="link-list__link">О&nbsp;нас</a>
@@ -302,32 +319,28 @@
       </div>
       <div class="footer__form">
         <h2 class="footer__title">Оставить заявку</h2>
-        <div class="footer__wrapper">
-          <form action="https://jsonplaceholder.typicode.com/posts" class="form" method="POST">
-            <input type="text" name="name" class="form__name-field form__field" placeholder="Фамилия, имя и отчество*"
-              required>
-            <input type="email" name="email" class="form__email-field form__field" placeholder="E-mail*" required>
-            <textarea name="message" class="form__message-field form__field" placeholder="Сообщение"></textarea>
-            <div class="form__send">
-              <button class="form__btn btn">Отправить данные</button>
-              <label for="agreement" class="form__checkbox checkbox">
-                <input type="checkbox" name="agreement" id="agreement" class="checkbox__item" required>
-                <span class="checkbox__text">Согласен на обработку данных</span>
-              </label>
-            </div>
-          </form>
-          <div class="footer__desc">
-            <p class="footer__text">
-              Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
-              факта:
-              разбавленное изрядной долей эмпатии, рациональное мышление позволяет оценить значение модели развития.
-              Таким
-              образом, консультация с широким активом обеспечивает широкому кругу (специалистов) участие
-              в формировании стандартных подходов.
-            </p>
+        <form action="https://jsonplaceholder.typicode.com/posts" class="form" method="POST">
+          <input type="text" name="name" class="form__name-field form__field" placeholder="Фамилия, имя и отчество*"
+            required>
+          <input type="email" name="email" class="form__email-field form__field" placeholder="E-mail*" required>
+          <textarea name="message" class="form__message-field form__field" placeholder="Сообщение"></textarea>
+          <div class="form__send">
+            <button class="form__btn btn">Отправить данные</button>
+            <label for="agreement" class="form__checkbox checkbox">
+              <input type="checkbox" name="agreement" id="agreement" class="checkbox__item" required>
+              <span class="checkbox__text">Согласен на обработку данных</span>
+            </label>
           </div>
-        </div>
+        </form>
       </div>
+      <p class="footer__desc">
+        Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
+        факта:
+        разбавленное изрядной долей эмпатии, рациональное мышление позволяет оценить значение модели развития.
+        Таким
+        образом, консультация с широким активом обеспечивает широкому кругу (специалистов) участие
+        в формировании стандартных подходов.
+      </p>
     </div>
   </footer>
 </body>
